--- a/src/Login/Components/Section.module.css
+++ b/src/Login/Components/Section.module.css
@@ -67,9 +67,21 @@
     margin-left: 120px;
     margin-top: 40px;
     font-size: 20px;
+    gap: 20px;
+    display: flex;
+    margin-right: 40px;
 }
 .lembrar input{
     width: 10%;
+    margin-right: -20px;
+}
+.Link{
+    text-decoration: none;
+    color: #ffffff;
+}
+.lembrar p{
+    font-size: 20px;
+    margin-right: 10px;
 }
 .acessar{
     width: 50%;
@@ -81,10 +93,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    display: flex;
 }
+
 .acessar button{
-    width: 300px;
-    padding: 10px;
+    width: 250px;
+    padding: 5px;
     border-radius: 30px;
     background-color: #03A64A;
     color: #ffffff;
@@ -93,6 +107,19 @@
 }
 .acessar p{
     font-size:25px;
+    margin-top: 30px; 
+}
+Link{
+    font-size: 60px;
+    text-decoration: none;
+    color: #ffffff;
+}
+.Link2{
+    text-decoration: none;
+}
+.Link2 p{
     margin-top: 30px;
-    
+   text-align: center;
+  
+   
 }
