--- a/src/Home/Components/Header.module.css
+++ b/src/Home/Components/Header.module.css
@@ -5,14 +5,12 @@
     box-sizing: border-box;
 }
 /* HEADER */
-
 .Header{
     width:100%;
     background-color: #03A64A;
     display: flex;
     align-items: center;
-    gap: 100px;
-    
+    gap: 80px; 
 }
 img{
     width: 150px;
@@ -20,19 +18,23 @@ img{
     margin-left: 80px;
     margin-top: 10px;
 }
-p{
-   font-size: 13px;
+p{  
+
+   font-size: 11px;
    color: #FFF;
 }
 .cliente{
    margin-left: 90px;
 }
 .botao1{
-    width: 7%;
+    width: 9%;
     height: 50px;
     text-align: center;
     background-color:rgb(0, 0, 0);
     border-radius: 40px;
+}
+.login{
+    text-decoration: none;
     color: #FFF;
-    font-size: 12px;
+    font-size: 23px;
 }
