--- a/src/Home/Components/Video.module.css
+++ b/src/Home/Components/Video.module.css
@@ -9,7 +9,7 @@
     margin-top: 50px;
 }
 .Textos{
-    width: 50%;
+    width: 60%;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -18,17 +18,19 @@
     margin-left: 300px;
 }
  h2{
-    width: 65%;
-    font-size:60px ;
+    width: 80%;
+    font-size:50px ;
     color: #ffffff;
     text-align: center;
+    text-align: right;
 }
 .Botao2{
-    width: 25%;
+    width: 40%;
     height: 50px;
-    background-color: #15e36e;
-    font-size: 20px;
+    background-color: #03A64A;
+    font-size: 18px;
     border-radius: 30px;
-    margin-top: 80px;
-    
+    margin-top: 60px;
+    margin-left: 80px;
+    padding: 10px;
 }
